Multi page structure with main view, shop, chat and airdrop, also some refactoring

--- a/onetimepad/Info.plist
+++ b/onetimepad/Info.plist
@@ -20,6 +20,8 @@
             </array>
             <key>CFBundleTypeRole</key>
             <string>Editor</string>
+            <key>LSSupportsOpeningDocumentsInPlace</key>
+            <string>YES</string>
         </dict>
 	</array>
 </dict>
