Loading screen and pfp picker

--- a/onetimepad/Info.plist
+++ b/onetimepad/Info.plist
@@ -21,7 +21,7 @@
 				<string>public.json</string>
 			</array>
 			<key>LSSupportsOpeningDocumentsInPlace</key>
-			<string>YES</string>
+			<true/>
 		</dict>
 	</array>
 </dict>
